--- a/6.放大镜/javascript_version/magnifier.html
+++ b/6.放大镜/javascript_version/magnifier.html
@@ -7,92 +7,82 @@
 <meta name="description" content="智能社是一家专注于web前端开发技术的公司，目前主要提供JavaScript培训和HTML5培训两项服务，同时还推出了大量javascript基础知识教程，智能课堂为你带来全新的学习方法和快乐的学习体验。" />
 <title>智能社— http://www.zhinengshe.com</title>
 <style>
-*{ margin:0; padding:0; list-style:none;}
-#box{ position:relative; left:200px; top:100px;}
-#small{ width:300px; height:300px; position:relative;}
-#small img{ width:300px;}
-#small span{ width:100px; height:100px; background:#000; position:absolute; left:0; top:0; opacity:0.4; filter:alpha(opacity:40); cursor:move; display:none;}
-#big{ width:300px; height:300px; position:absolute; left:310px; top:0; overflow:hidden; display:none;}
-#big img{ position:absolute; left:0; top:0;}
+#miker{
+	height: 300px;left: 0;top:0;right: 0;bottom: 0;margin: auto;position: relative;
+}
+#miker span{ width:60px; height:90px; background:red; position:absolute; left:0; top:0; opacity:0.4; filter:alpha(opacity:40); cursor:move; display:none;}
+#miker .small{
+	position: relative;left: 0;top:0;height: 300px;width: 200px;
+}
+#miker .big{
+	position: absolute;left: 220px;top:0;display: none;height: 300px;width: 200px;overflow: hidden;
+}
+#miker .small img{
+	height: 300px;
+}
+#miker #view{
+	position: absolute;
+}
 </style>
 <script>
-function getPos(obj){
-	var l=0;
-	var t=0;
-	while(obj){
-		l+=obj.offsetLeft;
-		t+=obj.offsetTop;
-		obj=obj.offsetParent;	
-	}
-	return {left:l ,top: t};
-}
-function isChild(oParent,obj){
-	while(obj){
-		if(obj==oParent)return true;
-		obj=obj.parentNode;
-	}
-	return false;
-}
-window.onload=function(){
-	var oBox=document.getElementById('box');
-	var oSmall=document.getElementById('small');
-	var oFloat=document.getElementById('float');
-	var oBig=document.getElementById('big');
-	var oImg=document.getElementById('img');
-	
-	oSmall.onmouseover=function(){
-		oFloat.style.display='block';
-		oBig.style.display='block';	
+window.onload = function(){
+	function getPos(obj){
+		var l=0,t=0;
+		while(obj){
+			l+=obj.offsetLeft;
+			t+=obj.offsetTop;
+			obj = obj.offsetParent;
+		}
+		return {left:l,top:t};
 	}
 	
-	oSmall.onmouseout=function(ev){
-		var oEvent=ev || event;
-		var to=oEvent.toElement || oEvent.relatedTarget;
-		
-		if(isChild(oSmall,to))return;
-		
-		oFloat.style.display='none';
-		oBig.style.display='none';	
-	}	
+	var miker = document.getElementById('miker');
+	var bar = document.getElementById('bar');
+	var view = document.getElementById('view');
+	var small = miker.children[0];
+
+	small.onmouseover = function(){
+		bar.style.display = 'block';
+		miker.children[1].style.display = 'block';
+	}
+	small.onmouseleave = function(ev){
+
+		var ev = ev || event;
+		var to= ev.toElement || ev.relatedTarget;
+		// 是否包含子元素 或者捕获
+		// if(this.contains(to || document.body) )return;
+
+		bar.style.display = 'none';
+		miker.children[1].style.display = 'none';
+	}
+	small.onmousemove = function(ev){
+		var ev = ev || event;
+		var l = (ev.pageX || ev.clientX) - bar.offsetWidth/2 - getPos(small).left;
+		var t = (ev.pageY || ev.clientY) - bar.offsetHeight/2 - getPos(small).top;
+		if(l<0)l=0;
+		if(t<0)t=0;
+		if(t>small.offsetHeight - bar.offsetHeight){
+			t = small.offsetHeight - bar.offsetHeight;
+		}
+		if(l>small.offsetWidth - bar.offsetWidth){
+			l = small.offsetWidth - bar.offsetWidth;
+		}
 	
-	
-	oSmall.onmousemove=function(ev){
-		var oEvent=ev || event;
-		var l=oEvent.pageX-getPos(oSmall).left-oFloat.offsetWidth/2;
-		var t=oEvent.pageY-getPos(oSmall).top-oFloat.offsetHeight/2;
-		console.log(l,t);
-		l<0 && (l=0);
-		l>oSmall.offsetWidth-oFloat.offsetWidth && (l=oSmall.offsetWidth-oFloat.offsetWidth);
-		
-		t<0 && (t=0);
-		t>oSmall.offsetHeight-oFloat.offsetHeight && (t=oSmall.offsetHeight-oFloat.offsetHeight);
-		
-		oFloat.style.left=l+'px';
-		oFloat.style.top=t+'px';
-		
-		document.title=l;
-		
-		
-		//小图：  l/(oSmall.offsetWidth-oFloat.offsetWidth);
-		//大图:   ?/(oImg.offsetWidth-oBig.offsetWidth);
-		console.log((oImg.offsetWidth-oBig.offsetWidth)/(oSmall.offsetWidth-oFloat.offsetWidth)+'px')
-		
-		oImg.style.left=-l*(oImg.offsetWidth-oBig.offsetWidth)/(oSmall.offsetWidth-oFloat.offsetWidth)+'px';	
-		oImg.style.top=-t*(oImg.offsetHeight-oBig.offsetHeight)/(oSmall.offsetHeight-oFloat.offsetHeight)+'px';
+		bar.style.left = l + 'px';
+		bar.style.top = t + 'px';
+		// 计算比例然后对应移动相反的left top
+		view.style.left=-l*(view.offsetWidth-miker.children[1].offsetWidth)/(small.offsetWidth-bar.offsetWidth)+'px';
+		view.style.top=-t*(view.offsetHeight-miker.children[1].offsetHeight)/(small.offsetHeight-bar.offsetHeight)+'px';
+
 	}
 }
 </script>
 </head>
 
 <body>
-<div id="box">
-	<div id="small">
-    	<span id="float"></span>
-        <img src="../images/small.jpg">
-    </div>
-    <div id="big">
-    	<img src="../images/big.jpg" id="img">
-    </div>
-</div>
+	<div id="miker">
+		<div class="small"><img  src="../images/nv.jpg" alt=""><span id="bar"></span></div>
+		<div class="big"><img id="view" src="../images/nv.jpg" alt=""></div>
+	</div>
 </body>
 </html>
